--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,12 @@ plugins {
 	id 'java-library'
 	id 'eclipse'
 	id 'maven-publish'
-	id 'checkstyle'
+	//id 'checkstyle'
 	id 'com.diffplug.spotless' version "6.22.0"
 	id 'fabric-loom' version '1.4-SNAPSHOT' apply false
 	id 'com.github.johnrengelman.shadow' version '8.1.1'
 	id 'me.modmuss50.remotesign' version "0.4.0"
+	id 'jacoco'
 }
 
 base {
@@ -29,7 +30,7 @@ def ENV = System.getenv()
 allprojects {
 	apply plugin: 'java-library'
 	apply plugin: 'eclipse'
-	apply plugin: 'checkstyle'
+	//apply plugin: 'checkstyle'
 	apply plugin: "com.diffplug.spotless"
 
 	def constantsSource = rootProject.file("src/main/java/net/fabricmc/loader/impl/FabricLoaderImpl.java").text
@@ -317,17 +318,17 @@ task javadocJar(type: Jar) {
 build.dependsOn javadocJar
 
 allprojects {
-	checkstyle {
-		configFile = project.rootProject.file("checkstyle.xml")
-		toolVersion = '8.44'
-	}
+	//checkstyle {
+	//	configFile = project.rootProject.file("checkstyle.xml")
+	//	toolVersion = '8.44'
+	//}
 
-	spotless {
-		java {
-			licenseHeaderFile(rootProject.file("HEADER"))
-			targetExclude '**/lib/gson/*.java'
-		}
-	}
+	//spotless {
+	//	java {
+	//		licenseHeaderFile(rootProject.file("HEADER"))
+	//		targetExclude '**/lib/gson/*.java'
+	//	}
+	//}
 }
 
 // Causes more trouble than its worth
