--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 	id 'java-library'
 	id 'eclipse'
 	id 'maven-publish'
-	//id 'checkstyle'
+	id 'checkstyle'
 	id 'com.diffplug.spotless' version "6.22.0"
 	id 'fabric-loom' version '1.4-SNAPSHOT' apply false
 	id 'com.github.johnrengelman.shadow' version '8.1.1'
@@ -320,17 +320,17 @@ task javadocJar(type: Jar) {
 build.dependsOn javadocJar
 
 allprojects {
-	//checkstyle {
-	//	configFile = project.rootProject.file("checkstyle.xml")
-	//	toolVersion = '8.44'
-	//}
+	checkstyle {
+		configFile = project.rootProject.file("checkstyle.xml")
+		toolVersion = '8.44'
+	}
 
-	//spotless {
-	//	java {
-	//		licenseHeaderFile(rootProject.file("HEADER"))
-	//		targetExclude '**/lib/gson/*.java'
-	//	}
-	//}
+	spotless {
+		java {
+			licenseHeaderFile(rootProject.file("HEADER"))
+			targetExclude '**/lib/gson/*.java'
+		}
+	}
 }
 
 // Causes more trouble than its worth
