--- a/build.gradle
+++ b/build.gradle
@@ -125,6 +125,9 @@ dependencies {
 	// Unit testing for mod metadata
 	testImplementation('org.junit.jupiter:junit-jupiter:5.9.2')
 	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
+
+	// Unit testing for logging mod that have providers
+	testImplementation("org.mockito:mockito-core:5.10.0")
 }
 
 apply from: rootProject.file('gradle/installer-json.gradle')
